[package]
name = "tbe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.52.3", features = ["tcp", "dns", "async-std", "noise", "yamux", "websocket", "ping", "macros"] }

base58 = {version = "0.2.0"}
